--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	},
 	"dependencies": {
 		"react": "~15.4.1",
-		"react-native": "0.42.3"
+		"react-native": "0.42.3",
+		"react-native-image-progress": "^0.6.0",
+		"react-native-progress": "^3.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
